--- a/contact.html
+++ b/contact.html
@@ -97,17 +97,17 @@
                                     <div class="row">
                                         <div class="col-lg-6">
                                             <div class="contact-form-style mb-20">
-                                                <input name="name" placeholder="Full Name" type="text">
+                                                <input name="name" placeholder="Full Name" type="text" required>
                                             </div>
                                         </div>
                                         <div class="col-lg-6">
                                             <div class="contact-form-style mb-20">
-                                                <input name="email" placeholder="Email Address" type="email">
+                                                <input name="email" placeholder="Email Address" type="email" required>
                                             </div>
                                         </div>
                                         <div class="col-lg-12">
                                             <div class="contact-form-style mb-20">
-                                                <input name="subject" placeholder="Subject" type="text">
+                                                <input name="subject" placeholder="Subject" type="text" required>
                                             </div>
                                         </div>
                                         <div class="col-lg-12">
