--- a/contact.html
+++ b/contact.html
@@ -93,7 +93,7 @@
                         <div class="contact-message-wrapper">
                             <h4 class="contact-title mb-25">Leave Us a Message</h4>
                             <div class="contact-message">
-                                <form id="contact-form" https://formspree.io/f/xgedynzz method="POST">
+                                <form id="contact-form" action="https://formspree.io/f/xgedynzz" method="POST">
                                     <div class="row">
                                         <div class="col-lg-6">
                                             <div class="contact-form-style mb-20">
